[workspace]
members = [
  "examples/pako-analyzer",
  #"pcap-cli",
  "examples/pako-info",
  "examples/pako-rewrite",
  "examples/test-analyzer",
  "pako-core",
  "pako-tools",
  "plugins/explugin-example",
]

[patch.crates-io]
# pcap-parser = { git="https://github.com/rusticata/pcap-parser" }
# pcap-parser = { path="../pcap-parser" }
