[workspace]
members = [
  "examples/pako-analyzer",
  "examples/pako-info",
  "examples/pako-repl",
  "examples/pako-rewrite",
  "examples/test-analyzer",
  "pako-core",
  "pako-pcap",
  "pako-tools",
  "plugins/explugin-example",
]

[patch.crates-io]
pako-tools = { git = "https://github.com/adoerr/pako" }

