[workspace]
members = [
  "examples/pako-analyzer",
  "examples/pako-info",
  "examples/pako-rewrite",
  "pako-core",
  "pako-pcap",
  "pako-tools",
  "plugins/explugin-example",
]

[patch.crates-io]
pako-core = { git = "https://github.com/adoerr/pako"}
pako-tools = { git = "https://github.com/adoerr/pako" }

