[package]
name = "libpcap-tools"
version = "0.1.0"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>", "Andreas Doerr <0xad@gmx.net>"]
edition = "2021"

description = "Library for creating of Pcap file analyzers"
categories = ["network-programming"]

keywords    = ["pcap", "network", "tools"]
readme      = "../README.md"
license     = "MIT/Apache-2.0"

repository    = "https://github.com/adoerr/pako.git"


[badges]
travis-ci                         = { repository = "rusticata/pcap-analyzer" }
is-it-maintained-open-issues      = { repository = "rusticata/pcap-analyzer" }
maintenance                       = { status     = "actively-developed" }

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
toml="0.5"

[dependencies.pcap-parser]
version = "0.14.0"
features = ["data"]
