[package]
name = "pako-core"
version = "0.1.3-dev"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>", "Andreas Doerr <0xad@gmx.net>"]
edition = "2021"
description = "pako (main library)"
readme  = "../README.md"
repository = "https://github.com/adoerr/pako.git"
license  = "Apache-2.0 OR MIT"
keywords = ["pcap", "network", "tools"]
categories = ["network-programming"]

[features]
default = []
release = ["plugin_community_id", "plugin_ospf"]
all = ["release", "plugins_debug", "plugin_examples"]
plugin_community_id = ["sha1", "base16ct", "base64ct"]
plugins_debug = []
plugin_examples = []
plugin_ospf = ["ospf-parser"]

[dependencies]
base16ct = { version = "0.1.1", features = ["alloc"], optional = true }
base64ct = { version = "1.5.3", features = ["alloc"], optional = true }
crossbeam-channel = { version = "0.5.6" }
fnv = { version = "1.0.7" }
indexmap = { version = "1.9.2", features = ["serde-1"] }
lazy_static = { version = "1.2.0" }
log = { version = "0.4.17" }
multimap = { version = "0.8.3" }
num_cpus = { version = "1.14.0" }
ospf-parser = { version = "0.5.0", optional = true }
pako-tools = { version = "0.1.2" }
pnet_base = { version = "0.33.0" }
pnet_macros_support = { version = "0.33.0" }
pnet_packet = { version = "0.33.0" }
rand = { version = "0.8.5" }
rand_chacha = { version = "0.3.1" }
seahash = { version = "4.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.93" }
sha1 = { version = "0.10", features = ["std"], optional = true }
thiserror = { version = "1.0.38" }
tls-parser = { version = "0.11.0", optional = true }
