[package]
name = "pako-tools"
version = "0.1.3-dev"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>", "Andreas Doerr <0xad@gmx.net>"]
edition = "2021"
description = "Library for creating of Pcap file analyzers"
readme  = "../README.md"
repository = "https://github.com/adoerr/pako.git"
license = "Apache-2.0 OR MIT"
keywords = ["pcap", "network", "tools"]
categories = ["network-programming"]

[dependencies]
log = { version = "0.4.17" }
pcap-parser = { version = "0.14.0", features = ["data"] }
serde = { version = "1.0.156", features = ["derive"] }
thiserror = { version = "1.0.39" }
toml = { version = "0.7.3" }
