[package]
name = "pcap-cli"
version = "0.1.0"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>", "Andreas Doerr <0xad@gmx.net>"]
edition = "2021"

description = "Pcap file conversion/rewrite tool"
categories = ["network-programming"]

keywords    = ["pcap", "network", "tools"]
readme      = "../README.md"
license     = "MIT/Apache-2.0"

repository    = "https://github.com/adoerr/pako.git"


[badges]
travis-ci                         = { repository = "rusticata/pcap-analyzer" }
is-it-maintained-open-issues      = { repository = "rusticata/pcap-analyzer" }
maintenance                       = { status     = "actively-developed" }

[dependencies]
clap = { version = "4.0", features = ["cargo", "derive"] }
fern = "0.6"
lazy_static = "1.2"
libpcap-analyzer = { version="0.1.0", path= "../pako-core" }
libpcap-tools = { version="0.1.0", path= "../pako-tools" }
log = { version = "0.4", features = ["max_level_trace", "release_max_level_warn"] }
pcap-parser = "0.14"
rustyline = "10.0"
serde_json = "1.0"
time = { version="0.3", features=["local-offset"] }
