[package]
name = "pcap-info"
version = "0.1.0"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>", "Andreas Doerr <0xad@gmx.net>"]
edition = "2021"

description = "Pcap file information tool"
categories = ["network-programming"]

keywords = ["pcap", "network", "tools"]
readme = "../README.md"
license = "MIT/Apache-2.0"

repository = "https://github.com/adoerr/pako.git"


[lib]
name = "pcap_info"
path = "src/lib.rs"
doc = true

[[bin]]
name = "pcap-info"
path = "src/main.rs"
doc = false

[badges]
travis-ci = { repository = "rusticata/pcap-analyzer" }
is-it-maintained-open-issues = { repository = "rusticata/pcap-analyzer" }
maintenance = { status = "actively-developed" }

[dependencies]
blake2 = "0.10"
clap = { version = "4.0", features = ["cargo", "derive"] }
digest = "0.10"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
sha-1 = "0.10"
sha2 = "0.10"
smart-default = "0.6"
time = { version="0.3", features=["local-offset"] }
xz2 = "0.1"

[dependencies.pcap-parser]
version = "0.14"
features = ["data", "serialize"]
