[package]
name = "pako-analyzer"
version = "0.1.0"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>", "Andreas Doerr <0xad@gmx.net>"]
repository = "https://github.com/adoerr/pako.git"
license = "MIT or Apache-2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["cargo", "derive"] }
env_logger = "0.10.0"
flate2 = { version = "1.0.25", features = ["zlib"], default-features = false }
log = { version = "0.4.17", features = ["max_level_debug", "release_max_level_warn"] }
lz4 = { version = "1.23.3" }
pako-core = { version = "0.1.2" }
pako-tools = { version = "0.1.2" }
serde_json = "1.0.96"
xz2 = { version = "0.1.7" }
