[package]
name = "pako-info"
version = "0.1.0"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>", "Andreas Doerr <0xad@gmx.net>"]
repository = "https://github.com/adoerr/pako.git"
license = "MIT or Apache-2.0"
edition = "2021"

[lib]
name = "pako_info"
path = "src/lib.rs"
doc = true

[[bin]]
name = "pako-info"
path = "src/main.rs"
doc = false

[dependencies]
blake2 = { version = "0.10.6" }
clap = { version = "4.1.3", features = ["cargo", "derive"] }
digest = { version = "0.10.6" }
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
pcap-parser = { version = "0.14.0", features = ["data", "serialize"] }
sha-1 = { version = "0.10.0" }
sha2 = { version = "0.10.6" }
smart-default = { version = "0.6.0" }
time = { version = "0.3.17", features = ["local-offset"] }
xz2 = { version = "0.1.7" }
