[package]
name = "test-analyzer"
version = "0.1.0"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>", "Andreas Doerr <0xad@gmx.net>"]
edition = "2021"

[dependencies]
clap = { version = "4.0.26", features = ["cargo", "derive"] }
flate2 = { version = "1.0.24", features = ["zlib"], default-features = false }
log = { version = "0.4.17", features = ["max_level_trace", "release_max_level_warn"] }
lz4 = { version = "1.23.3" }
serde_json = { version = "1.0.89" }
simplelog = { version = "0.12.0", default-features = false }
xz2 = { version = "0.1.7" }

explugin-example = { path = "../../plugins/explugin-example" }
pako-tools = { path = "../../pako-tools" }
pako-core = { path = "../../pako-core" }
