[package]
name = "explugin-example"
description = "Example of libpcap-analyzer plugin, in an external directory"
version = "0.1.0"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>", "Andreas Doerr <0xad@gmx.net>"]
edition = "2021"

[dependencies]
libpcap-tools = { path = "../../pako-tools" }
pako-core = { path = "../../pako-core" }
